--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.12,<4.0"
 dependencies = [
     "pygame (>=2.6.1,<3.0.0)",
-    "numpy (>=2.3.3,<3.0.0)"
+    "numpy (>=2.3.3,<3.0.0)",
+    "scipy (>=1.16.3,<2.0.0)"
 ]
 
 [tool.poetry]
